# fixxer

./: .gitignore  README.md  pyproject.toml
fixxer/: __init__.py  cli.py  clustering.py  db.py  export.py  ingestion.py  pipeline.py  scoring.py  selection.py
fixxer/ui/: server.py  tui.py
tests/: test_pipeline.py
